fix: resolve compilation compatibility and synchronize universal fix protocols